# airflow_etl_twitter

./: README.md  docker-compose.yaml  extracao_api_twitter.py  pyproject.toml
datalake/twitter_datascience/extract_date=2024-07-30/: datascience_20240730.json
datalake/twitter_datascience/extract_date=2024-07-31/: datascience_20240731.json
datalake/twitter_datascience/extract_date=2024-08-01/: datascience_20240801.json
